# hikaku-voice

./: .gitignore  LICENSE  Makefile  README.md  main.py  plugins_config.py.example  pyproject.toml  requirements-local.txt.example  start_dev.sh  stt_service.py  tts_service.py
backend/: main.py  pyproject.toml  stt_service.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: VoiceComparison.tsx
frontend/public/: worklet.js
templates/: base.html  index.html  tts.html
